--- a/css/styles.css
+++ b/css/styles.css
@@ -240,7 +240,7 @@ body {
             background-color: rgba(255,255,255,0.8);
             border-radius: 20.8%;
             position:absolute;
-            right:10%;
+            right:15%;
             cursor: pointer;
         }
         #closebox::before, #closebox::after {
@@ -456,6 +456,9 @@ body {
             #PageLinks a.portfolioLink {
                 padding-bottom:3px;
                 padding-top: 9px;
+            }
+            #closebox {
+                right:25%;
             }
 /*End Portfolio Page*/
 
