--- a/css/styles.css
+++ b/css/styles.css
@@ -259,38 +259,79 @@ body {
         #closebox::after {
             transform: rotate(-45deg);
         }
-        #image-details #image-display {
-            display:flex;
+        #image-details #previewArea {
+            display: grid;
             justify-self: stretch;
             flex-grow: 2;
-            align-items: center;
-            justify-content: center;
             min-height:0px;
             height:100%;
             width:100%;
-            overflow: hidden;
+            grid-template-columns: 2fr 1fr 1fr;
+            grid-template-rows: auto 10%;
+            /* grid-template-rows: 100%;  */
         }
-            #image-container {
-                display:flex;
-                flex-shrink:0;
-                justify-content: center;
+            #previewArea #previousImage {
+                display:grid;
+                grid-column-start: 2;
+                grid-row-start: 2;
             }
-                #image-image {
-                    width:100%;
+                #previousImage #previousHitbox {
+                    display: grid;
+                    width:50px;
                     height:100%;
-                    max-width:1500px;
-                    object-fit: contain;
-                    filter: drop-shadow(0px 0px 40px black);
+                    border: 1px solid rgba(255,255,255,.75);
+                    justify-self: end;
+                    margin-right: 5px;
                 }
-                @keyframes sizeout {
-                    0%  {filter: none;}
-                    25% {filter:drop-shadow(0 -3px 0 #cccccc) drop-shadow(0 3px 0 #cccccc) drop-shadow(-3px 0 0 #cccccc) drop-shadow(3px 0 0 #cccccc); }
-                    50% {filter:none;}
-                    75% {filter:drop-shadow(0 -3px 0 #cccccc) drop-shadow(0 3px 0 rgba(255,255,255,0.9)) drop-shadow(-3px 0 0 #cccccc) drop-shadow(3px 0 0 #cccccc); }
-                    100% {filter:none;}
+            
+            #previewArea #image-display {
+                display:flex;
+                justify-self: stretch;
+                flex-grow: 2;
+                align-items: center;
+                justify-content: center;
+                min-height:0px;
+                height:100%;
+                width:100%;
+                overflow: hidden;
+                grid-column-start: 1;
+                grid-column: span 3;
+                grid-row-start:1;
+            }
+                #image-container {
+                    display:flex;
+                    flex-shrink:0;
+                    justify-content: center;
                 }
-                .size-out {
-                    animation: sizeout .5s linear;
+                    #image-image {
+                        width:100%;
+                        height:100%;
+                        max-width:1500px;
+                        object-fit: contain;
+                        filter: drop-shadow(0px 0px 15px black);
+                    }
+                    @keyframes sizeout {
+                        0%  {filter: none;}
+                        25% {filter:drop-shadow(0 -3px 0 #cccccc) drop-shadow(0 3px 0 #cccccc) drop-shadow(-3px 0 0 #cccccc) drop-shadow(3px 0 0 #cccccc); }
+                        50% {filter:none;}
+                        75% {filter:drop-shadow(0 -3px 0 #cccccc) drop-shadow(0 3px 0 rgba(255,255,255,0.9)) drop-shadow(-3px 0 0 #cccccc) drop-shadow(3px 0 0 #cccccc); }
+                        100% {filter:none;}
+                    }
+                    .size-out {
+                        animation: sizeout .5s linear;
+                    }
+            #previewArea #nextImage {
+                display: grid;
+                grid-column-start: 3;
+                grid-row-start: 2;
+            }
+                #nextImage #nextHitbox {
+                    display:grid;
+                    width:50px;
+                    height:100%;
+                    border: 1px solid rgba(255,255,255,.75);
+                    justify-self: start;
+                    margin-left: 5px;
                 }
         #image-details .image-instructions {
             justify-self: end;
@@ -441,7 +482,7 @@ body {
                 }
 /*End About Page*/
 
-@media only screen and (min-width: 515px) {
+@media only screen and (min-width: 600px) {
 /*Global Elements*/
         nav {
                 flex-direction: row;
@@ -463,8 +504,46 @@ body {
                 padding-top: 9px;
             }
             #closebox {
-                right:25%;
+                right:5%;
             }
+            #image-details #previewArea {
+                display: grid;
+                justify-self: stretch;
+                flex-grow: 2;
+                min-height:0px;
+                height:100%;
+                width:100%;
+                grid-template-columns: 60px auto 60px;
+                grid-template-rows: 1fr;
+                /* grid-template-rows: 100%;  */
+            }
+                #previewArea #previousImage {
+                    grid-column-start: 1;
+                    grid-row-start: 1;
+                }
+                    #previousImage #previousHitbox {
+                        margin-right: 0;
+                    }
+                #previewArea #image-display {
+                    justify-self: stretch;
+                    align-items: center;
+                    justify-content: center;
+                    min-height:0px;
+                    height:100%;
+                    width:100%;
+                    overflow: hidden;
+                    grid-column-start: 2;
+                    grid-column: span 1;
+                    grid-row-start:1;
+                }
+                #previewArea #nextImage {
+                    grid-column-start: 3;
+                    grid-row-start: 1;
+                }
+                    #nextImage #nextHitbox {
+                        justify-self: start;
+                        margin-left: 0px;
+                    }
 /*End Portfolio Page*/
 
 /*About Page Elements*/
@@ -503,7 +582,7 @@ body {
 /*End About Page*/
 }
 
-@media only screen and (min-width: 515px) and (min-aspect-ratio: 9/10){
+@media only screen and (min-width: 600px) and (min-aspect-ratio: 9/10){
 /*Global elements*/
     body { 
         background:  url("../images/global/bg/BG_hxsmall_L.png") no-repeat left top,
@@ -763,6 +842,11 @@ body {
 /*End Home page*/ 
 
 /*Portfolio Page Specific*/
+            #image-details #previewArea {
+                grid-template-columns: 90px auto 90px;
+                grid-template-rows: 1fr;
+                /* grid-template-rows: 100%;  */
+            }    
     #PageLinks a.portfolioLink {
         background-color: inherit;
         color: #30170E;
