--- a/css/styles.css
+++ b/css/styles.css
@@ -506,7 +506,7 @@ body {
 /*End About Page*/
 @media only screen and (hover: none) {
     body {
-        height: calc(var(--vh, 1vh)*100);
+        min-height: calc(var(--vh, 1vh)*100);
     }
 }
 
