Revert "Version 0.8.5a - Reverting About Page Changes"
This reverts commit df304e61058b913966018c6ab08359e3d12af49e.

--- a/css/styles.css
+++ b/css/styles.css
@@ -470,6 +470,9 @@ body {
             #PageLinks .aboutLink {
                 text-decoration: underline;
             }
+            #about-mainContent {
+                overflow-y: hidden;
+            }
             #about-content-container {
                 width: 100vw;
                 display:flex;
