--- a/css/styles.css
+++ b/css/styles.css
@@ -112,11 +112,13 @@ body {
             line-height: 1.42em;
             letter-spacing: .0035em;
             padding-right:20px;
-            margin-top: -18px;
         }
 /*End Global Elements*/
 
 /*Home page specific*/
+body.homePage {
+    min-height: 100vh;
+}
     .mainContent {
         display:flex;
         align-items:stretch;
