--- a/css/styles.css
+++ b/css/styles.css
@@ -94,21 +94,32 @@ body {
         justify-content: center;
         letter-spacing: .005em;
         flex-direction: column;
-        margin-top:5vh;
+        align-items: center;
     }
         #HomeLink {
             text-align: center;
             font-size: 1.75em;
             line-height: 1.33em;
+            margin-top: .5vh;
+            margin-bottom:.5vh;
         }
         #PageLinks {
             text-align: center;
+            display: flex;
+            /* align-items: center; */
+
         }
             #PageLinks a {
                 margin-left:30px;
                 font-size: 1.125em;
                 line-height: 1.61em;
                 margin-right:30px;
+            }
+
+            #insta {
+                width: 25px;
+                display: flex;
+                align-self: center;
             }
     footer {
         display: flex;
@@ -122,6 +133,9 @@ body {
             letter-spacing: .0035em;
             padding-right:20px;
         }
+.hide {
+    display:none;
+}
 /*End Global Elements*/
 
 /*Home page specific*/
@@ -253,7 +267,6 @@ body.homePage {
     }
         #image-details header {
             display:flex;
-            justify-self: start;
             flex-direction: row;
             justify-content: center;
             width:100%;
@@ -261,10 +274,25 @@ body.homePage {
             padding-bottom:10px;
             border-bottom: solid 1px rgba(255,255,255,0.4);
         }
-        #image-details header #image-title {
-            justify-self: end;
-            font-style: italic;
+        #image-details header #header-copy{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            text-align: center;
         }
+            #image-details header #image-title {
+                display:flex;
+                justify-content: center;
+                font-size:1.75em;
+                font-style: italic;
+                margin-bottom:0.1em;
+            }
+            #image-details header #purchase-link a{
+                color: white;
+                font-size: 1.0625em;
+                letter-spacing: .03em;
+                text-decoration: underline;
+            }
         #closebox {
             width:1.5em;
             height:1.5em;
@@ -543,7 +571,7 @@ body.homePage {
 
 @media (hover:none) and (pointer:coarse) {
     #image-details #previewArea {
-        grid-template-columns: 3fr 1fr;        
+        grid-template-columns: 1fr 1fr;        
     }
 }
 
@@ -556,11 +584,13 @@ body.homePage {
             }
             #HomeLink {
                 font-size: 1.5em;
+                margin: 0;
             }
             #PageLinks a {
                 margin-left:15px;
                 margin-right:15px;
             }
+            
 /*End Global Elements*/
 
 /*Home Elements*/
@@ -604,6 +634,7 @@ body.homePage {
                 margin-left:15px;
                 margin-right:15px;
             }
+            
 /*End Global Elements*/
 
 /*Home page specific*/            
@@ -674,11 +705,17 @@ body.homePage {
                 font-size: 1.875em;
                 line-height:1.067em;
             }
+            #PageLinks {
+                align-items: center;
+            }
             #PageLinks a {
                 margin-left:15px;
                 margin-right:15px;
                 font-size: 1.5em;
                 line-height: 1.333em;
+            }
+            #insta {
+                width: 32px;
             }
             footer div {
                 font-size: 1em;
@@ -875,12 +912,16 @@ body {
             }
             #PageLinks {
                 margin-right:10.9375vw;
+                align-items: end;
             }
             #PageLinks a {
                 margin-left:30px;
                 margin-right:30px;
                 font-size: 1.75em;
                 line-height: 0.875em;
+            }
+            #insta {
+                width: 37px;
             }
 /*End Global Elements*/
 
